force-app/main/default/objects/Opp_Product__c/fields/Unit_Price_Final__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Final__c</fullName>
    <inlineHelpText>Price to end customer. Leave empty if the business is direct.</inlineHelpText>
    <label>Unit Price Final</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>