force-app/main/default/objects/Opp_Product__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>&quot;Quantity&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>used for app4analytics</inlineHelpText>
    <label>Unit Type</label>
    <type>Text</type>
</CustomField>