force-app/main/default/objects/Opp_Product__c/fields/Update_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Update_Contribution__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Triggers new calculation of contribution with updated values (COGS, etc.). Once it&apos;s been updated, it&apos;s unticked automatically.</description>
    <inlineHelpText>Triggers new calculation of contribution with updated values (COGS, etc.). Once it&apos;s been updated, it&apos;s unticked automatically.</inlineHelpText>
    <label>Update Contribution</label>
    <type>Checkbox</type>
</CustomField>