force-app/main/default/objects/Opp_Product__c/fields/USD_Rate__c.field-meta.xml
<CustomField>
    <fullName>USD_Rate__c</fullName>
    <description>USD rate in the currency of Opp Product, used to convert IPR USD value taken from Product</description>
    <formula>CASE(text(CurrencyIsoCode),
&quot;CHF&quot;,$User.USDtoCHF__c,
&quot;EUR&quot;,$User.USDtoEUR__c,
&quot;JPY&quot;,$User.USDtoJPY__c,
1)</formula>
    <inlineHelpText>USD rate in the currency of Opp Product, used to convert IPR USD value taken from Product</inlineHelpText>
    <label>USD Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>