force-app/main/default/objects/Opp_Product__c/fields/Use_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Use_Restriction__c</fullName>
    <label>Use Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2G Consumer</fullName>
            </value>
            <value>
                <fullName>2G M2M</fullName>
            </value>
            <value>
                <fullName>2G Telematics</fullName>
            </value>
            <value>
                <fullName>2G Handset</fullName>
            </value>
            <value>
                <fullName>2G Laptop</fullName>
            </value>
            <value>
                <fullName>2G Other</fullName>
            </value>
            <value>
                <fullName>3G M2M</fullName>
            </value>
            <value>
                <fullName>3G Telematics</fullName>
            </value>
            <value>
                <fullName>3G Handset</fullName>
            </value>
            <value>
                <fullName>3G Laptop</fullName>
            </value>
            <value>
                <fullName>3G Other</fullName>
            </value>
            <value>
                <fullName>4G M2M</fullName>
            </value>
            <value>
                <fullName>4G Telematics</fullName>
            </value>
            <value>
                <fullName>4G Handset</fullName>
            </value>
            <value>
                <fullName>4G Laptop</fullName>
            </value>
            <value>
                <fullName>4G Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>