force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Cellular.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Cellular</fullName>
    <active>true</active>
    <description>Cellular products can be selected in this record type.</description>
    <label>Opp Product Cellular</label>
</RecordType>