force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Positioning.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Positioning</fullName>
    <active>true</active>
    <description>Positioning products can be selected in this record type.</description>
    <label>Opp Product Positioning</label>
</RecordType>