force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Service.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Service</fullName>
    <active>false</active>
    <label>Opp Product Service</label>
</RecordType>