force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Services.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Services</fullName>
    <active>true</active>
    <description>Services product can be selected in this record type.</description>
    <label>Opp Product Services</label>
</RecordType>