force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Short_Range.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Short_Range</fullName>
    <active>true</active>
    <description>Short Range products can be selected in this record type.</description>
    <label>Opp Product Short Range</label>
</RecordType>