force-app/main/default/objects/Opp_Product__c/recordTypes/Opp_Product_Tashang.recordType-meta.xml
<RecordType>
    <fullName>Opp_Product_Tashang</fullName>
    <active>true</active>
    <description>Tashang products can be selected in this record type.</description>
    <label>Opp Product Tashang</label>
</RecordType>