force-app/main/default/objects/Opp_Product__c/validationRules/Currency_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_check</fullName>
    <active>false</active>
    <description>The user can&apos;t insert if the Currency is different from the one of the Opportunity.</description>
    <errorConditionFormula>IF(
  $User.Id = &quot;00520000000zbAX&quot;,FALSE, /* exclude :khir: for mass-update */
  AND(ISNEW(),TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Opportunity__r.CurrencyIsoCode))
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Please use the same Currency as the Opportunity.</errorMessage>
</ValidationRule>