force-app/main/default/objects/Opp_Product__c/validationRules/Loss_Reason_should_be_given_when_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_should_be_given_when_Status</fullName>
    <active>true</active>
    <description>Reason should be given when Status is Won or Loss</description>
    <errorConditionFormula>(text(Status__c)=&quot;Lost&quot; || text(Status__c)=&quot;Won&quot;) &amp;&amp;
isblank(text(Loss_Reason__c)) &amp;&amp;
not($User.ProfileId=&quot;00e20000000ki5l&quot;||$User.ProfileId=&quot;00e20000000xThb&quot;||$User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Reason should be given when Status is Won or Loss</errorMessage>
</ValidationRule>