force-app/main/default/objects/Opp_Product__c/validationRules/Reason_Remark_required_for_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Remark_required_for_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
(TEXT(Status__c)=&quot;Lost&quot;) &amp;&amp;
ISBLANK(Loss_Reason_Remark__c) &amp;&amp;
not($User.ProfileId=&quot;00e20000000ki5l&quot;||$User.ProfileId=&quot;00e20000000xThb&quot;||$User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Loss_Reason_Remark__c</errorDisplayField>
    <errorMessage>Reason Remark is required when Status is Lost.</errorMessage>
</ValidationRule>