force-app/main/default/objects/Opp_Product__c/validationRules/SW_Environment_check_ARM_mbed.validationRule-meta.xml
<ValidationRule>
    <fullName>SW_Environment_check_ARM_mbed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Software_Environment__c, &quot;OpenCPU ARM mbed&quot;) &amp;&amp; NOT(ISPICKVAL(Product__r.Product_Series__c, &quot;ANNA-B1&quot;)) &amp;&amp;
NOT(ISPICKVAL(Product__r.Product_Series__c, &quot;NINA-B1&quot;)) &amp;&amp;
NOT(ISPICKVAL(Product__r.Product_Series__c, &quot;ODIN-W2&quot;)) &amp;&amp;
LEFT(Product__r.Name, 4) &lt;&gt; &quot;BMD-&quot; &amp;&amp;
LEFT(Product__r.Name, 5) &lt;&gt; &quot;R41Z-&quot; &amp;&amp;
NOT($User.ProfileId=&quot;00e20000000ki5l&quot;) &amp;&amp;
NOT($User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Software_Environment__c</errorDisplayField>
    <errorMessage>&quot;OpenCPU ARM mbed&quot; is not available for the selected product.</errorMessage>
</ValidationRule>