force-app/main/default/objects/Opp_Product__c/validationRules/SW_Environment_check_Espressif_SDK.validationRule-meta.xml
<ValidationRule>
    <fullName>SW_Environment_check_Espressif_SDK</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Software_Environment__c, &quot;OpenCPU Espressif SDK&quot;) &amp;&amp; 
LEFT(Product__r.Name, 8) &lt;&gt; &quot;NINA-W10&quot; &amp;&amp;
NOT($User.ProfileId=&quot;00e20000000ki5l&quot;) &amp;&amp;
NOT($User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Software_Environment__c</errorDisplayField>
    <errorMessage>&quot;OpenCPU Espressif SDK&quot;  is not available for the selected product.</errorMessage>
</ValidationRule>