force-app/main/default/objects/Opp_Product__c/validationRules/SW_Environment_check_Nordic_SDK.validationRule-meta.xml
<ValidationRule>
    <fullName>SW_Environment_check_Nordic_SDK</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Software_Environment__c, &quot;OpenCPU Nordic SDK&quot;) &amp;&amp; 
NOT(ISPICKVAL(Product__r.Product_Series__c, &quot;NINA-B1&quot;)) &amp;&amp;
LEFT(Product__r.Name, 7) &lt;&gt; &quot;ANNA-B1&quot; &amp;&amp;
LEFT(Product__r.Name, 8) &lt;&gt; &quot;NINA-B30&quot; &amp;&amp;
LEFT(Product__r.Name, 8) &lt;&gt; &quot;NINA-B40&quot; &amp;&amp;
LEFT(Product__r.Name, 4) &lt;&gt; &quot;BMD-&quot; &amp;&amp;
LEFT(Product__r.Name, 5) &lt;&gt; &quot;R41Z-&quot; &amp;&amp;
LEFT(Product__r.Name, 8) &lt;&gt; &quot;ANNA-B40&quot; &amp;&amp;
LEFT(Product__r.Name, 8) &lt;&gt; &quot;NORA-B10&quot; &amp;&amp;
NOT($User.ProfileId=&quot;00e20000000ki5l&quot;) &amp;&amp;
NOT($User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Software_Environment__c</errorDisplayField>
    <errorMessage>&quot;OpenCPU Nordic SDK&quot;  is not available for the selected product.</errorMessage>
</ValidationRule>