force-app/main/default/objects/Opp_Product__c/validationRules/SW_Environment_check_ublox_JS.validationRule-meta.xml
<ValidationRule>
    <fullName>SW_Environment_check_ublox_JS</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Software_Environment__c, &quot;u-blox JavaScript&quot;) &amp;&amp; 
LEFT(Product__r.Name, 8) &lt;&gt; &quot;NINA-B31&quot; &amp;&amp;
NOT($User.ProfileId=&quot;00e20000000ki5l&quot;) &amp;&amp; /* Sys Admin */
NOT($User.ProfileId=&quot;00eD00000016L3v&quot;) /* API Admin */</errorConditionFormula>
    <errorDisplayField>Software_Environment__c</errorDisplayField>
    <errorMessage>&quot;u-blox JavaScript&quot; is not available for the selected product.</errorMessage>
</ValidationRule>