force-app/main/default/objects/Opp_Product__c/validationRules/Use_Restriction_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Use_Restriction_Check</fullName>
    <active>true</active>
    <description>Check that only valid use restrictions are assigned to Cellular product.</description>
    <errorConditionFormula>IF(OR($User.Id = &quot;00557000006eQYE&quot;,$User.Id = &quot;00520000000zbAX&quot;),FALSE,
IF(Product__r.IPR_Class__c = &quot;2G&quot;, IF(LEFT(TEXT(Use_Restriction__c),2) = &quot;2G&quot;, FALSE, TRUE),
IF(Product__r.IPR_Class__c = &quot;3G&quot;, IF(LEFT(TEXT(Use_Restriction__c),2) = &quot;3G&quot;, FALSE, TRUE),
IF(AND(OR(Product__r.IPR_Class__c=&quot;4G&quot;,ISPICKVAL(Product__r.Technology__c,&quot;LTE&quot;),ISPICKVAL(Product__r.Technology__c,&quot;NB-IoT&quot;)), NOT(ISPICKVAL(Product__r.Technology__c, &quot;RPMA&quot;))), IF(LEFT(TEXT(Use_Restriction__c),2) = &quot;4G&quot;, FALSE, TRUE),
FALSE))))</errorConditionFormula>
    <errorDisplayField>Use_Restriction__c</errorDisplayField>
    <errorMessage>Use Restriction does not match the type of the selected product</errorMessage>
</ValidationRule>