force-app/main/default/objects/Opp_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Center__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Quantity__c</columns>
    <columns>Revenue__c</columns>
    <columns>Product_Series__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>All</label>
</ListView>