force-app/main/default/objects/Opp_Product__c/listViews/Americas_flagged_items.listView-meta.xml
<ListView>
    <fullName>Americas_flagged_items</fullName>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flagged_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <label>Americas flagged items</label>
    <sharedTo>
        <group>Logistics</group>
        <group>Logistics_Admin_Americas</group>
        <group>Sales_Americas</group>
    </sharedTo>
</ListView>