force-app/main/default/objects/Opp_Product__c/listViews/APAC_Flagged_items.listView-meta.xml
<ListView>
    <fullName>APAC_Flagged_items</fullName>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Flagged_Item__c</columns>
    <columns>Demand_Forecast__c</columns>
    <columns>Channel_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>Flagged_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EMEA Flagged items</label>
    <sharedTo>
        <group>Sales_Admins_EMEA</group>
        <group>Support_EMEA</group>
    </sharedTo>
</ListView>