force-app/main/default/objects/Opp_Product__c/listViews/Flagged_Items_ewan.listView-meta.xml
<ListView>
    <fullName>Flagged_Items_ewan</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Flagged_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Channel_Manager__c</field>
        <operation>equals</operation>
        <value>Eric Wang</value>
    </filters>
    <label>Flagged Items ewan</label>
    <sharedTo>
        <group>Opp_Products_ewan</group>
    </sharedTo>
</ListView>