force-app/main/default/objects/Opp_Product__c/listViews/Harman_Flagged_items.listView-meta.xml
<ListView>
    <fullName>Harman_Flagged_items</fullName>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Flagged_Item__c</columns>
    <columns>Demand_Forecast__c</columns>
    <columns>Channel_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Account__c</field>
        <operation>contains</operation>
        <value>Harman,Universal Scientific Industrial,Sanmina</value>
    </filters>
    <filters>
        <field>Flagged_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Harman Flagged items</label>
</ListView>