force-app/main/default/objects/Opp_Product__c/listViews/JMEI_Budget_items2.listView-meta.xml
<ListView>
    <fullName>JMEI_Budget_items2</fullName>
    <columns>Opportunity_Account__c</columns>
    <columns>NAME</columns>
    <columns>Channel_Manager__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>uB_Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>uB_Office__c</field>
        <operation>contains</operation>
        <value>Australia</value>
    </filters>
    <label>Australia 2021 Budget items</label>
</ListView>