force-app/main/default/objects/Opp_Product__c/listViews/My_Budget_items1.listView-meta.xml
<ListView>
    <fullName>My_Budget_items1</fullName>
    <columns>NAME</columns>
    <columns>uB_Office__c</columns>
    <columns>Channel_Manager__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Annual_Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <label>SHO Budget items</label>
    <sharedTo>
        <group>PS_SHO</group>
    </sharedTo>
</ListView>