force-app/main/default/objects/Opp_Product__c/listViews/My_Flagged_items_auto.listView-meta.xml
<ListView>
    <fullName>My_Flagged_items_auto</fullName>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Demand_Forecast__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Flagged_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Flagged items</label>
</ListView>