force-app/main/default/objects/Opp_Product__c/listViews/SHO_Opportunities_New_last_30_days.listView-meta.xml
<ListView>
    <fullName>SHO_Opportunities_New_last_30_days</fullName>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Annual_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Revenue_Unweighted__c</columns>
    <columns>CM_pct__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Evaluation,Won</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>THEO</value>
    </filters>
    <label>THEO Opportunities New last 30 days</label>
    <sharedTo>
        <group>Recipients_SHO_Statistics</group>
    </sharedTo>
</ListView>