force-app/main/default/objects/Opp_Product__c/listViews/SHO_Opportunities_Won_last_30_days.listView-meta.xml
<ListView>
    <fullName>SHO_Opportunities_Won_last_30_days</fullName>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Account__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Date_Won__c</columns>
    <columns>Start_Production__c</columns>
    <columns>Annual_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>CM_pct__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Loss_Reason__c</columns>
    <columns>Stage_Won__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Won__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <label>SHO Opportunities Won last 30 days</label>
    <sharedTo>
        <group>Recipients_SHO_Statistics</group>
    </sharedTo>
</ListView>